--- a/Kalkulator/MainWindow.xaml
+++ b/Kalkulator/MainWindow.xaml
@@ -10,10 +10,14 @@
         <TextBlock 
             FontSize="16"
             TextAlignment="Right"
-             >Działanie</TextBlock>
+            Margin="0,0,5,0"
+            Text="{Binding Path=Działanie}"
+             />
         <TextBlock
             TextAlignment="Right"
-            >Wynik</TextBlock>
+            Margin="0,0,5,0"
+            Text="{Binding Path=Wynik}"
+            />
         <StackPanel 
             Style="{DynamicResource Wiersz}"
             >
@@ -51,7 +55,7 @@
             >
             <Button Style="{DynamicResource Cyfra}">1</Button>
             <Button Style="{DynamicResource Cyfra}">2</Button>
-            <Button Style="{DynamicResource Cyfra}">3</Button>
+            <Button Style="{DynamicResource Cyfra}" Click="Cyfra">3</Button>
             <Button>+</Button>
         </StackPanel>
         <StackPanel 
